[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopypes"
version = "1.0.2"
description = "Scalable async pipelines in Python, made easy"
authors = [
    {name = "mroumanos", email = "mroumanos@pm.me"}
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = [
    "asyncio",
    "pipeline",
    "pipe",
    "stream"
]
dependencies = [
    'tomli; python_version >= "3.10"',
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/mroumanos/aiopypes"
Documentation = "https://aiopypes.readthedocs.io"
Repository = "https://github.com/mroumanos/aiopypes.git"

[project.scripts]
realpython = "reader.__main__:main"